Various tests in media/track are intermittently crashing. https://bugs.webkit.org/show_bug.cgi?id=105606

Reviewed by Eric Seidel.

The root of problem is the fact that we update tracks even if we are in process of deleting the document.
Media element can stop doing that if the document informed the element via ::stop that it is going away.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::endIgnoringTrackDisplayUpdateRequests):

Canonical link: https://commits.webkit.org/123866@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138381 268f45cc-cd09-0410-ab3c-d52691b4dbfc